--- a/package.json
+++ b/package.json
@@ -3,22 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8089",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
+    "classnames": "^2.3.1",
     "next": "12.2.5",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^7.2.6",
+    "redux-injectors": "^1.3.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
+    "@styled-jsx/plugin-sass": "^4.0.2",
     "@types/node": "18.7.8",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "html-loader": "^3.1.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-react-svg": "^1.1.3",
+    "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "sass": "^1.54.5",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
