--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.6.0",
     "@reduxjs/toolkit": "^1.7.1",
     "classnames": "^2.3.1",
-    "next": "12.2.5",
+    "next": "12.0.7",
     "next-redux-wrapper": "^7.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "17.0.2",
+    "react-dom": "16.13.1",
+    "react-popper": "^2.2.4",
     "react-redux": "^7.2.6",
+    "react-transition-group": "^4.4.2",
     "redux-injectors": "^1.3.0",
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@styled-jsx/plugin-sass": "^4.0.2",
-    "@types/node": "18.7.8",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
+    "@types/node": "17.0.8",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "18.0.0",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
@@ -35,6 +38,6 @@
     "sass": "^1.54.5",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "4.5.4"
   }
 }
