--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.6.0",
     "@reduxjs/toolkit": "^1.7.1",
     "classnames": "^2.3.1",
+    "moment": "^2.29.4",
     "next": "12.0.7",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
@@ -20,11 +21,17 @@
     "react-redux": "^7.2.6",
     "react-transition-group": "^4.4.2",
     "redux-injectors": "^1.3.0",
-    "redux-saga": "^1.1.3"
+    "react-hook-form": "^6.9.2",
+    "@hookform/error-message": "^2.0.0",
+    "react-select": "3.1.0",
+    "redux-saga": "^1.1.3",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "@styled-jsx/plugin-sass": "^4.0.2",
+    "@trivago/prettier-plugin-sort-imports": "^2.0.4",
     "@types/node": "17.0.8",
+    "react-color": "^2.19.3",
     "@types/react": "17.0.38",
     "@types/react-dom": "18.0.0",
     "autoprefixer": "^10.4.8",
