--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
     "@popperjs/core": "^2.6.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "moment": "^2.29.4",
     "next": "12.0.7",
+    "next-base64": "^1.1.0",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "16.13.1",
+    "react-hook-form": "^6.9.2",
     "react-popper": "^2.2.4",
     "react-redux": "^7.2.6",
-    "react-transition-group": "^4.4.2",
-    "redux-injectors": "^1.3.0",
-    "react-hook-form": "^6.9.2",
-    "@hookform/error-message": "^2.0.0",
     "react-select": "3.1.0",
+    "react-transition-group": "^4.4.2",
+    "react-window": "^1.8.6",
+    "redux-injectors": "^1.3.0",
     "redux-saga": "^1.1.3",
     "resize-observer-polyfill": "^1.5.1"
   },
@@ -31,9 +34,9 @@
     "@styled-jsx/plugin-sass": "^4.0.2",
     "@trivago/prettier-plugin-sort-imports": "^2.0.4",
     "@types/node": "17.0.8",
-    "react-color": "^2.19.3",
     "@types/react": "17.0.38",
     "@types/react-dom": "18.0.0",
+    "@types/react-select": "^4.0.17",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
@@ -42,6 +45,7 @@
     "next-react-svg": "^1.1.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "react-color": "^2.19.3",
     "sass": "^1.54.5",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.8",
